[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["RoaaMustafa <labushanab14@email.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
sklearn = "^0.0"
pandas = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
